--- a/EKCDataReadme.Rmd
+++ b/EKCDataReadme.Rmd
@@ -2,7 +2,9 @@
 title: "EKCDataReadme"
 author: "Peter Jakobsen"
 date: "10/03/2020"
-output: html_document
+output:
+  md_document:
+    variant: markdown_github
 ---
 
 ```{r setup, include=FALSE}
